Fix page break on services in pdf

--- a/resources/assets/sass/print.sass
+++ b/resources/assets/sass/print.sass
@@ -48,7 +48,7 @@ body
             .service
                 margin-bottom: 1rem
                 padding-top: 3rem
-                page-break-after: auto
+                page-break-inside: avoid
                 .title
                     +font-size(16px)
                 ul
